--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educator JS Codespaces Template</title>
-    <link rel="stylesheet" href="/index.4d663569.css">
-    
-  </head>
-  <body>
-    <noscript>You need to enable Javascript to run this application.</noscript>
-    <div id="app">
-      <!-- Your react app will be rendered here -->
-    </div>
-    <script src="/index.975ef6c8.js" defer=""></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Educator JS Codespaces Template</title><link rel="stylesheet" href="https://sunnyk16.github.io/tempport/index.d8bb87be.css"></head><body> <noscript>You need to enable Javascript to run this application.</noscript> <div id="app">  </div> <script type="module" src="https://sunnyk16.github.io/tempport/index.1d3e5083.js"></script> </body></html>
